--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     background-color: red;
     color: white;
 }
-p{
+.n{
     background-color: rebeccapurple;
+}
+.a{
+    color: black;
+    background-color: white;
 }
